[package]
name = "lcf-validate-2kki"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.51", features = ["derive"] }
either = "1.15.0"
encoding_rs = "0.8.35"
indicatif = { version = "0.18.3", features = ["rayon"] }
lcf = "0.8.2"
owo-colors = "4.2.3"
rayon = "1.11.0"
